# pixelshare

./: Cargo.toml  Dockerfile  README.md  mydb.sqlite
.sqlx/: query-037ac2f625c67a6e3f9f06f7684c169eafe5c973d8a7e7d3e244b72b438bbe39.json
frontend/: index.html
migrations/: 20240114181353_create_users_table.sql  20240114181400_create_files_table.sql
src/: db.rs  main.rs
tests/: user_flow.rs
uploads/: yesterday.txt
