[package]
name = "pixelshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
warp = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sanitize-filename = "0.3"
bytes = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "macros"] }
bcrypt = "0.10"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
mime_guess = "2.0.3" 



